--- a/_config.yml
+++ b/_config.yml
@@ -31,5 +31,5 @@ social:
     url: 
   - title: github
     url: https://github.com
-  - title: linkedin
-    url: 
+  - title: whatsapp
+    url: https://bit.ly/BimbinganAktivasiPayTren
