--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ permalink: pretty
 social:
   - title: twitter
     url: 
-  - title: github
-    url: https://github.com
+  - title: facebook
+    url: https://fb.me
   - title: whatsapp
     url: https://bit.ly/BimbinganAktivasiPayTren
