--- a/_config.yml
+++ b/_config.yml
@@ -27,9 +27,9 @@ permalink: pretty
 # ----------------------- #
 
 social:
-  - title: twitter
-    url: 
   - title: facebook
-    url: https://fb.me
-  - title: whatsapp
+    url: https://fb.me/shofwa.paytren
+  - title: twitter
     url: https://bit.ly/BimbinganAktivasiPayTren
+  - title: instagram
+    url: 
