--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 url: http://wasilahsukses.github.io
 title: PayTren Wasilah Sukses
 email: triafrizalhilmi@gmail.com
-author: Tri Afrizal Hilmi
+author: Afrizal Hilmi
 description: > # "Write an awesome description for your new site here. 
   PayTren adalah aplikasi pembayaran online via Android atau Apple yang
   dapat digunakan untuk melakukan pembayaran pulsa, listrik, BPJS, angsuran leasing,
