--- a/_config.yml
+++ b/_config.yml
@@ -5,13 +5,13 @@
 url: http://wasilahsukses.github.io
 title: PayTren Wasilah Sukses
 email: triafrizalhilmi@gmail.com
-author: Afrizal Hilmi
+author: Tri Afrizal Hilmi
 description: > # "Write an awesome description for your new site here. 
   PayTren adalah aplikasi pembayaran online via Android atau Apple yang
   dapat digunakan untuk melakukan pembayaran pulsa, listrik, BPJS, angsuran leasing,
   booking tiket kereta, pesawat, voucher game, telkom, speedy, TV kabel, 
   dan akan terus berinovasi untuk bisa digunakan untuk pembayaran apapun.
-copyright: 'Copyright &copy; 2017 Tri Afrizal Hilmi. All Rights Reserved.'
+copyright: 'Copyright &copy; 2017 Wasilah Sukses. All Rights Reserved.'
 credits: 'Credits: Open source Bootstrap theme created by <a href="http://startbootstrap.com/">Start Bootstrap</a>.'
 
 # ----------------------- #
